# robo_dual_6DOF

./: ejecutable_completo.sh  ejecutable_interfaz.sh
DOCUMENTACIÓN/: ~$TFM.docx
ESCENAS/: ESCENA_8_entrega.ttt
MODELO/: PLATAFORMA_4WHL_2ARMS_6GDL.urdf  PLATAFORMA_4WHL_2ARM_6GDL.ttm
MODELO/STLS/: CUERPO.STL  RUEDA_FL.STL  RUEDA_FR.STL  RUEDA_RL.STL  RUEDA_RR.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/controlador_plataforma/lib/controlador_plataforma/: controlador_plataforma_node
ros2_ws/install/controlador_plataforma/share/controlador_plataforma/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/controlador_plataforma/share/controlador_plataforma/cmake/: controlador_plataformaConfig.cmake
ros2_ws/install/sim_ros2_interface/share/ament_index/resource_index/package_run_dependencies/: sim_ros2_interface
ros2_ws/install/sim_ros2_interface/share/ament_index/resource_index/parent_prefix_path/: sim_ros2_interface
ros2_ws/install/sim_ros2_interface/share/sim_ros2_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros2_ws/install/sim_ros2_interface/share/sim_ros2_interface/cmake/: sim_ros2_interfaceConfig-version.cmake  sim_ros2_interfaceConfig.cmake
ros2_ws/install/sim_ros2_interface/share/sim_ros2_interface/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/log/: latest_build
ros2_ws/src/controlador_plataforma/: CMakeLists.txt
ros2_ws/src/controlador_plataforma/src/: main.cpp
