<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controlador_plataforma</name>
  <version>0.0.0</version>
  <description>Controlador de plataforma robótica movil con 2 UR-3e de 6 GDL</description>
  <maintainer email="josejuan.ic.correo@gmail.com">jibacem</maintainer>
  <license>jibacem</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
